--- a/index.html
+++ b/index.html
@@ -2154,7 +2154,7 @@
                         <i class="fab fa-discord"></i>
                         <span>Discord</span>
                     </a>
-                    <a href="https://t.me" target="_blank" class="social-link telegram">
+                    <a href="https://t.me/nazarovv_pubg" target="_blank" class="social-link telegram">
                         <i class="fab fa-telegram"></i>
                         <span>Telegram</span>
                     </a>
@@ -2651,4 +2651,5 @@
         }
     </script>
 </body>
+
 </html>
